--- a/src/features/menubar/menubar.css
+++ b/src/features/menubar/menubar.css
@@ -1,13 +1,18 @@
-.menubar {
-    background: white;
+nav {
+    background: black;
     width: 100%;
 }
 
 .menubar-item {
+    float: left;
     background: rgba(0, 0, 0, 0.5);
-    display: inline-block;
-    padding: 10px; 
+    display: block;
+    padding: 10px;
     margin-right: 10px;
     color: white;
     text-decoration: none;
+}
+
+nav a.active {
+    font-weight: bold;
 }
